# Screenshot-Unlocker

./: .hgignore  .hgtags  Makefile.am  README.md  configure.ac  docker-build.sh
.github/workflows/: build.yml
assets/: banner.xcf  icon.xcf
src/: main.cpp
